<resources>
    <string name="app_name">Codeforces Visualizer</string>
    <string name="no_contest_found">No contest found</string>
    <string name="initiating">Fetching data from server…</string>
    <string name="retry">Retry</string>
    <string name="failed_to_init">Failed to initialize</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="phase">Phase</string>
    <string name="frozen">Frozen</string>
    <string name="duration">Duration</string>
    <string name="start">Start</string>
    <string name="starting_in">Starting in -</string>
    <string name="upcomming_contests">Upcoming Contests</string>
    <string name="past_contests">Past Contests</string>
    <string name="new_data_available">New data available</string>
    <string name="reload">Reload</string>
    <string name="colon">:</string>
    <string name="search">Search</string>
    <string name="search_user">Search User</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="organization">Organization</string>
    <string name="friends_of">Friends of</string>
    <string name="registered">Registered</string>
    <string name="profile">Profile</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="searching">Searching…</string>
    <string name="enter_handle">Enter Handle</string>
    <string name="rating">Rating</string>
    <string name="rank">Rank</string>
    <string name="contests">Contests</string>
    <string name="languages">Languages</string>
    <string name="verdicts">Verdicts</string>
    <string name="tags">Tags</string>
    <string name="levels">Levels</string>
    <string name="data_updated">Data updated</string>
    <string name="unsolved">Unsolved</string>
    <string name="no_browser_found">No browser found</string>
    <string name="unable_to_fetch_user_info">Unable to fetch User information</string>
    <string name="infos">Extras</string>
    <string name="tried_problems">Tried problems</string>
    <string name="solved_problems">Solved problems</string>
    <string name="number_of_contests">Number of contests</string>
    <string name="best_rank">Best rank</string>
    <string name="worst_rank">Worst rank</string>
    <string name="max_up">Max up</string>
    <string name="max_down">Max down</string>
    <string name="home">Home</string>
    <string name="fetching_data_from_server">Fetching data from server</string>
    <string name="compare">Compare</string>
    <string name="enter_first_handle">Enter first handle</string>
    <string name="enter_second_handle">Enter second handle</string>
    <string name="required">Required</string>
    <string name="compare_users">Compare</string>
    <string name="Handle1">Handle1</string>
    <string name="Handle2">Handle2</string>
    <string name="max_up_and_down">Max up and down</string>
    <string name="tried_and_solved">Tried and Solved</string>
    <string name="solved_with_one_submission">Solved with one submission</string>
    <string name="failed_to_open_link">Failed to open link</string>
    <string name="upcoming">Upcoming</string>
    <string name="previous">Previous</string>
    <string name="more">More</string>
    <string name="about">About</string>
    <string name="rate">Rate App</string>
    <string name="share">Share App</string>
    <string name="choose_one">choose one</string>
    <string name="follow_me_on_social">Follow me on Social</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_internet_message">You are not connected to the internet. Please make sure that WiFi or mobile data is on and try again.</string>
    <string name="night_mode">Night Mode</string>
    <string name="no_suitable_app_found">No suitable app found</string>
</resources>
