<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_drawer_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search_user"/>
    <item
        android:id="@+id/nav_drawer_compare"
        android:icon="@drawable/ic_compare_black_24dp"
        android:title="@string/compare_users"/>
    <item
        android:id="@+id/side_nav_about"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/about" />
    <item
        android:id="@+id/side_nav_rate"
        android:icon="@drawable/ic_star_black_24dp"
        android:title="@string/rate" />
    <item
        android:id="@+id/side_nav_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/share" />
</menu>